# PyUSD

./: .gitignore  install_self.py  pyproject.toml
PyUSD/: Prim.py  Stage.py  __init__.py
PyUSD/Geom/: Sphere.py
pyusd/: Prim.py  Stage.py  __init__.py  api_schema_base.py  api_wrapper.py  attribute.py  attribute_prefix.py  clips_api.py  code_generator.py  collection_api.py  collection_api.pyi  color_space.py  color_space_api.py  color_space_api.pyi  color_space_definition_api.py  color_space_definition_api.pyi  common.py  data.py  dtypes.py  layer.py  layer_metadata.py  layer_metadata.pyi  metadata.py  metadata.pyi  model_api.py  prim.py  prim.pyi  prim_metadata.py  prim_metadata.pyi  property.py  relationship.py  schema_generated.usda  stage.py  typed.py  utils.py
pyusd/geom/: Xform.py  __init__.py  basis_curves.py  basis_curves.pyi  boundable.py  boundable.pyi  camera.py  camera.pyi  capsule.py  capsule.pyi  capsule_1.py  capsule_1.pyi  classes.puml  cone.py  cone.pyi  cube.py  cube.pyi  curves.py  curves.pyi  cylinder.py  cylinder.pyi  cylinder_1.py  cylinder_1.pyi  exposure.pyi  geom_model_api.py  geom_model_api.pyi  geom_subset.py  geom_subset.pyi  gprim.py  gprim.pyi  hermite_curves.py  hermite_curves.pyi  imageable.py  imageable.pyi  mesh.py  mesh.pyi  model.pyi  motion.pyi  motion_api.py  motion_api.pyi  (+37 more)
pyusd/gf/: __init__.py  double2.py  double2.pyi  double3.py  double3.pyi  double4.py  double4.pyi  float2.py  float2.pyi  float3.py  float3.pyi  float4.py  float4.pyi  funcs.py  genMat.py  genMat2.py  genMat3.py  genMat4.py  genQuat.py  genType.py  genVec.py  (+21 more)
(+216 files in other folders)
